--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     <section id="container">
         <h1 class=" heads center">Our Services</h1>
         <div id="services">
-            <div class="box ">
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTUMIPLo3nKUf2vov2ku0tRcJq5qEI42iMq-Q&usqp=CAU" alt="error">
+            <div class="box " >
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTUMIPLo3nKUf2vov2ku0tRcJq5qEI42iMq-Q&usqp=CAU" alt="error" id="khana"> 
                 <h2 class="head1 center">For Vegans</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo, ex?Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
-            </div>
+         </div>
             <div class="box">
                 <img src="http://bsmedia.business-standard.com/_media/bs/img/article/2018-01/29/full/1517243856-5092.jpg" alt="pic not found" >
                 <h2 class="head1 center" >Order Online</h2>
