--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                 alt="error 404">
         </div>
         <ul>
-       <li> <a href="#">Home</a> </li>
-       <li> <a href="#">About Us</a> </li>
-       <li> <a href="#">Services</a> </li>
-       <li> <a href="#">Contact Us</a> </li>
+      <li> <a href="#home">Home</a> </li>
+       <li> <a href="#container">Services</a> </li>
+       <li> <a href="#customers">Customers</a> </li>
+       <li> <a href="#contact-box">Contact Us</a> </li>
         </ul>
     </nav>
     <section id="home">
